converted from static html to django

--- a/Project 0/images.html
+++ b/Project 0/images.html
@@ -13,7 +13,7 @@
         <main>
             <section class="search-container">
             <h1 class="googlelogo">Google Images</h1>
-            <form action="https://google.com/search">
+            <form action="https://www.google.com/">
                 <input class='searchinput' type="text" name="q">
                 <input type="submit" value="Google Search">
                 <input type="button" value="I'm feeling lucky">
